--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,12 @@
       <version>2.17.2</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.24</version>
+      <scope>provided</scope>
+    </dependency>
 
 
   </dependencies>
